--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "cypress": "^13.7.3",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
   }
